# Miro

./: .dockerignore  CLAUDE.md  CMakeLists.txt  Dockerfile  README.md
.github/workflows/: ci.yml
Benchmark/: Main.cpp
CMake/: FindGhcFilesystem.cmake  MiroTypeExport.cmake  Warnings.cmake
Example/: CMakeLists.txt  Main.cpp
Examples/: CMakeLists.txt
Examples/MiroTypesExport/: CMakeLists.txt  Registrations.cpp
Examples/ZodExport/: CMakeLists.txt  Main.cpp  Registrations.cpp  Types.h
Lib/: CMakeLists.txt
Lib/Miro/: Json.cpp  Json.h  JsonLoader.h  JsonSaver.h  Miro.cpp  Miro.h  Parser.cpp  Printer.cpp  ReflectContainers.h  ReflectMacro.h  Reflector.h  Serialize.h
Lib/Miro/CommandExport/: CommandExport.cpp  CommandExport.h  Register.cpp  Register.h
Lib/Miro/Cpp/: Cpp.cpp  Cpp.h
Lib/Miro/Detail/: CommandTable.cpp  Json.cpp  Json.h  JsonReflector.cpp  Parser.cpp  Printer.cpp  ReflectContainers.h  ReflectDispatch.h  ReflectEnum.h  ReflectMacro.h  Reflector.cpp  Reflector.h  Schema.h  Serialize.h
Lib/Miro/JSON/: Parser.cpp
Lib/Miro/Reflection/: Any.cpp  Any.h  CommandTable.cpp  CommandTable.h  JsonReflector.cpp  JsonReflector.h  ReflectContainers.h  ReflectDispatch.h  ReflectEnum.h  Reflector.cpp  Reflector.h  Serialize.h  TypeName.h
Lib/Miro/Schema/: Schema.cpp  Schema.h
Lib/Miro/TypeExport/: Main.cpp  Register.cpp  Register.h
Lib/Miro/TypeScript/: TypeScript.cpp  TypeScript.h
Lib/Miro/TypeTree/: TypeTree.cpp  TypeTree.h
SDKs/: CMakeLists.txt
SDKs/ghc-filesystem/: CMakeLists.txt
Tests/: CMakeLists.txt  CommandExportTests.cpp  CommandTableTests.cpp  CppExportTests.cpp  JsonTests.cpp  RecursionTests.cpp  ReflectorTests.cpp  SchemaReflectorTests.cpp  SchemaTypeScriptIssueProbes.cpp  TestHelpers.h  TestTypes.h  TypeScriptTests.cpp  VirtualReflectorTests.cpp
Tests/Benchmark/: CMakeLists.txt  Main.cpp
